--- a/stile.css
+++ b/stile.css
@@ -85,6 +85,7 @@ body{
     left: 0;
     width: 100vw;
     height: 100vh;
+    height: 100svh;
     background-color: var(--green);
     color: white;
     display: none;
